Adicionando css na pagina

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waffle-Classico</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet"
+/>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -41,6 +47,11 @@
                         <li>Retire com espátulas de silicone. Sirva com mel, frutas ou geleia.</li>
                     </ol>
             </section>
+            <section>
+                <h2>Informações Adicionais</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque qui fuga voluptates saepe quisquam vero magni deleniti explicabo reiciendis! Optio distinctio fugit qui sed quam eveniet unde atque quis et?</p>
+            </section>
+            
         
         </main>     
 
